// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReduxTypes should have specific type properties: all redux types 1`] = `
{
  "appTypes": {
    "SET_PRODUCT": "SET_PRODUCT",
    "SET_PRODUCT_VARIANT": "SET_PRODUCT_VARIANT",
    "SET_PRODUCT_VARIANT_QUERY_RESET_ALL": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "default": {
    "app": {
      "SET_PRODUCT": "SET_PRODUCT",
      "SET_PRODUCT_VARIANT": "SET_PRODUCT_VARIANT",
      "SET_PRODUCT_VARIANT_QUERY_RESET_ALL": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "graph": {
      "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
    },
    "inventory": {
      "CLEAR_INVENTORY_GUESTS": "CLEAR_INVENTORY_GUESTS",
      "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
    },
    "message": {
      "SET_BANNER_MESSAGES": "SET_BANNER_MESSAGES",
    },
    "platform": {
      "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
      "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
      "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
      "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
      "PLATFORM_USER_AUTH": "PLATFORM_USER_AUTH",
    },
    "query": {
      "SET_QUERY": "SET_QUERY",
      "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
      "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
      "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
      "SET_QUERY_GRAPH": "SET_QUERY_GRAPH",
      "SET_QUERY_INVENTORY_GUESTS": "SET_QUERY_INVENTORY_GUESTS",
      "SET_QUERY_INVENTORY_INSTANCES": "SET_QUERY_INVENTORY_INSTANCES",
      "SET_QUERY_INVENTORY_SUBSCRIPTIONS": "SET_QUERY_INVENTORY_SUBSCRIPTIONS",
      "SET_QUERY_RESET_INVENTORY_LIST": "SET_QUERY_RESET_INVENTORY_LIST",
    },
    "rhsm": {
      "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
      "GET_GRAPH_TALLY_RHSM": "GET_GRAPH_TALLY_RHSM",
      "GET_INSTANCES_INVENTORY_GUESTS_RHSM": "GET_INSTANCES_INVENTORY_GUESTS_RHSM",
      "GET_INSTANCES_INVENTORY_RHSM": "GET_INSTANCES_INVENTORY_RHSM",
      "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
    },
    "toolbar": {
      "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
      "SET_FILTER_TYPE": "SET_FILTER_TYPE",
    },
    "user": {
      "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
      "GET_USER_OPTIN": "GET_USER_OPTIN",
      "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
      "USER_LOCALE": "USER_LOCALE",
    },
  },
  "graphTypes": {
    "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
  },
  "inventoryTypes": {
    "CLEAR_INVENTORY_GUESTS": "CLEAR_INVENTORY_GUESTS",
    "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
  },
  "messageTypes": {
    "SET_BANNER_MESSAGES": "SET_BANNER_MESSAGES",
  },
  "platformTypes": {
    "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
    "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
    "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
    "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
    "PLATFORM_USER_AUTH": "PLATFORM_USER_AUTH",
  },
  "queryTypes": {
    "SET_QUERY": "SET_QUERY",
    "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
    "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
    "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
    "SET_QUERY_GRAPH": "SET_QUERY_GRAPH",
    "SET_QUERY_INVENTORY_GUESTS": "SET_QUERY_INVENTORY_GUESTS",
    "SET_QUERY_INVENTORY_INSTANCES": "SET_QUERY_INVENTORY_INSTANCES",
    "SET_QUERY_INVENTORY_SUBSCRIPTIONS": "SET_QUERY_INVENTORY_SUBSCRIPTIONS",
    "SET_QUERY_RESET_INVENTORY_LIST": "SET_QUERY_RESET_INVENTORY_LIST",
  },
  "reduxTypes": {
    "app": {
      "SET_PRODUCT": "SET_PRODUCT",
      "SET_PRODUCT_VARIANT": "SET_PRODUCT_VARIANT",
      "SET_PRODUCT_VARIANT_QUERY_RESET_ALL": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
      "STATUS_4XX": "4XX",
      "STATUS_5XX": "5XX",
    },
    "graph": {
      "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
    },
    "inventory": {
      "CLEAR_INVENTORY_GUESTS": "CLEAR_INVENTORY_GUESTS",
      "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
    },
    "message": {
      "SET_BANNER_MESSAGES": "SET_BANNER_MESSAGES",
    },
    "platform": {
      "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
      "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
      "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
      "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
      "PLATFORM_USER_AUTH": "PLATFORM_USER_AUTH",
    },
    "query": {
      "SET_QUERY": "SET_QUERY",
      "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
      "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
      "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
      "SET_QUERY_GRAPH": "SET_QUERY_GRAPH",
      "SET_QUERY_INVENTORY_GUESTS": "SET_QUERY_INVENTORY_GUESTS",
      "SET_QUERY_INVENTORY_INSTANCES": "SET_QUERY_INVENTORY_INSTANCES",
      "SET_QUERY_INVENTORY_SUBSCRIPTIONS": "SET_QUERY_INVENTORY_SUBSCRIPTIONS",
      "SET_QUERY_RESET_INVENTORY_LIST": "SET_QUERY_RESET_INVENTORY_LIST",
    },
    "rhsm": {
      "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
      "GET_GRAPH_TALLY_RHSM": "GET_GRAPH_TALLY_RHSM",
      "GET_INSTANCES_INVENTORY_GUESTS_RHSM": "GET_INSTANCES_INVENTORY_GUESTS_RHSM",
      "GET_INSTANCES_INVENTORY_RHSM": "GET_INSTANCES_INVENTORY_RHSM",
      "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
    },
    "toolbar": {
      "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
      "SET_FILTER_TYPE": "SET_FILTER_TYPE",
    },
    "user": {
      "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
      "GET_USER_OPTIN": "GET_USER_OPTIN",
      "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
      "USER_LOCALE": "USER_LOCALE",
    },
  },
  "rhsmTypes": {
    "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
    "GET_GRAPH_TALLY_RHSM": "GET_GRAPH_TALLY_RHSM",
    "GET_INSTANCES_INVENTORY_GUESTS_RHSM": "GET_INSTANCES_INVENTORY_GUESTS_RHSM",
    "GET_INSTANCES_INVENTORY_RHSM": "GET_INSTANCES_INVENTORY_RHSM",
    "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
  },
  "toolbarTypes": {
    "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
    "SET_FILTER_TYPE": "SET_FILTER_TYPE",
  },
  "userTypes": {
    "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
    "GET_USER_OPTIN": "GET_USER_OPTIN",
    "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
    "USER_LOCALE": "USER_LOCALE",
  },
}
`;

exports[`ReduxTypes should have specific type properties: specific types 1`] = `
{
  "app": {
    "SET_PRODUCT": "SET_PRODUCT",
    "SET_PRODUCT_VARIANT": "SET_PRODUCT_VARIANT",
    "SET_PRODUCT_VARIANT_QUERY_RESET_ALL": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
    "STATUS_4XX": "4XX",
    "STATUS_5XX": "5XX",
  },
  "graph": {
    "SET_GRAPH_LEGEND": "SET_GRAPH_LEGEND",
  },
  "inventory": {
    "CLEAR_INVENTORY_GUESTS": "CLEAR_INVENTORY_GUESTS",
    "SET_INVENTORY_TAB": "SET_INVENTORY_TAB",
  },
  "message": {
    "SET_BANNER_MESSAGES": "SET_BANNER_MESSAGES",
  },
  "platform": {
    "PLATFORM_ADD_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/ADD_NOTIFICATION",
    "PLATFORM_CLEAR_NOTIFICATIONS": "@@INSIGHTS-CORE/NOTIFICATIONS/CLEAR_NOTIFICATIONS",
    "PLATFORM_GLOBAL_FILTER_HIDE": "PLATFORM_GLOBAL_FILTER_HIDE",
    "PLATFORM_REMOVE_NOTIFICATION": "@@INSIGHTS-CORE/NOTIFICATIONS/REMOVE_NOTIFICATION",
    "PLATFORM_USER_AUTH": "PLATFORM_USER_AUTH",
  },
  "query": {
    "SET_QUERY": "SET_QUERY",
    "SET_QUERY_CLEAR": "SET_QUERY_CLEAR",
    "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST": "SET_QUERY_CLEAR_INVENTORY_GUESTS_LIST",
    "SET_QUERY_CLEAR_INVENTORY_LIST": "SET_QUERY_CLEAR_INVENTORY_LIST",
    "SET_QUERY_GRAPH": "SET_QUERY_GRAPH",
    "SET_QUERY_INVENTORY_GUESTS": "SET_QUERY_INVENTORY_GUESTS",
    "SET_QUERY_INVENTORY_INSTANCES": "SET_QUERY_INVENTORY_INSTANCES",
    "SET_QUERY_INVENTORY_SUBSCRIPTIONS": "SET_QUERY_INVENTORY_SUBSCRIPTIONS",
    "SET_QUERY_RESET_INVENTORY_LIST": "SET_QUERY_RESET_INVENTORY_LIST",
  },
  "rhsm": {
    "GET_GRAPH_CAPACITY_RHSM": "GET_GRAPH_CAPACITY_RHSM",
    "GET_GRAPH_TALLY_RHSM": "GET_GRAPH_TALLY_RHSM",
    "GET_INSTANCES_INVENTORY_GUESTS_RHSM": "GET_INSTANCES_INVENTORY_GUESTS_RHSM",
    "GET_INSTANCES_INVENTORY_RHSM": "GET_INSTANCES_INVENTORY_RHSM",
    "GET_SUBSCRIPTIONS_INVENTORY_RHSM": "GET_SUBSCRIPTIONS_INVENTORY_RHSM",
  },
  "toolbar": {
    "SET_ACTIVE_FILTERS": "SET_ACTIVE_FILTERS",
    "SET_FILTER_TYPE": "SET_FILTER_TYPE",
  },
  "user": {
    "DELETE_USER_OPTIN": "DELETE_USER_OPTIN",
    "GET_USER_OPTIN": "GET_USER_OPTIN",
    "UPDATE_USER_OPTIN": "UPDATE_USER_OPTIN",
    "USER_LOCALE": "USER_LOCALE",
  },
}
`;
